crates/megabase-server/tests/snapshots/http_snapshots__admin_missing_bearer.snap
---
source: crates/megabase-server/tests/http_snapshots.rs
expression: missing
---
{
  "body": {
    "code": 401,
    "error_code": "no_authorization",
    "msg": "This endpoint requires a valid Bearer token"
  },
  "content_type": "application/json",
  "status": 401
}
