crates/megabase-server/tests/snapshots/http_snapshots__megabase_health.snap
---
source: crates/megabase-server/tests/http_snapshots.rs
expression: health
---
{
  "body": {
    "name": "megabase",
    "status": "ok",
    "version": "[version]"
  },
  "content_type": "application/json",
  "status": 200
}
