crates/megabase-server/tests/snapshots/http_snapshots__rest_not_implemented.snap
---
source: crates/megabase-server/tests/http_snapshots.rs
expression: "observe(\"GET\", \"/rest/v1/todos\", None).await"
---
{
  "body": {
    "code": "PGRST000",
    "details": "DATABASE_URL is unset",
    "hint": null,
    "message": "Database connection error."
  },
  "content_type": "application/json; charset=utf-8",
  "status": 503
}
