crates/megabase-server/tests/snapshots/http_snapshots__signup_weak_password.snap
---
source: crates/megabase-server/tests/http_snapshots.rs
expression: weak
---
{
  "body": {
    "code": 422,
    "error_code": "weak_password",
    "msg": "Password should be at least 6 characters.",
    "weak_password": {
      "reasons": [
        "length"
      ]
    }
  },
  "content_type": "application/json",
  "status": 422
}
