crates/megabase-server/tests/snapshots/http_snapshots__studio_fallback.snap
---
source: crates/megabase-server/tests/http_snapshots.rs
expression: "observe(\"GET\", \"/\", None).await"
---
{
  "body": {
    "code": "MEGABASE_NOT_IMPLEMENTED",
    "component": "studio",
    "message": "GET / is not implemented by Megabase yet",
    "unit": "GET /"
  },
  "content_type": "application/json",
  "status": 501
}
